@@ -1,6 +1,7 @@
 0.8.0b0 (July 26, 2022) beta
 - now using ebookmaker 0.12 (beta),
 - use new notifier API
+- refactored/added --notify and --validate command-line options
 
 
 0.7.12 (June 7, 2022)
